# Licenses

./: .gitignore  README.md  com.github.eetagent.Licenses.json  meson.build  uncrustify.cfg
data/: com.github.eetagent.Licenses.appdata.xml.in  com.github.eetagent.Licenses.desktop.in  com.github.eetagent.Licenses.gschema.xml  meson.build
data/icons/: meson.build
data/licenses/: 0BSD.txt  AFL-3.0.txt  AGPL-3.0.txt  Apache-2.0.txt  Astistic-2.0.txt  BSD-2-CLAUSE.txt  BSD-3-CLAUSE.txt  BSD-4-CLAUSE.txt  BSL-1.0.txt  CC-BY-4.0.txt  CC-BY-SA-4.0.txt  CC0-1.0.txt  CeCILL-2.1.txt  ECL-2.0.txt  EPL-1.0.txt  EPL-2.0.txt  EUPL-1.1.txt  EUPL-1.2.txt  GPL-2.0.txt  GPL-3.0.txt  ISC.txt  LGPL-2.1.txt  LGPL-3.0.txt  LPPL-1.3C.txt  MIT.txt  MPL-2.0.txt  MS-PL.txt  MS-RL.txt  NCSA.txt  ODBL-1.0.txt  OFL-1.1.txt  PostgreSQL.txt  UPL-1.0.txt  Unlicense.txt  VIM.txt  WTFPL.txt  ZLIB.txt  licenses.gresource.xml  meson.build
po/: POTFILES  meson.build
src/: Licenses.vala  Main.vala  meson.build
src/Granite/: ModeSwitch.vala
src/Widgets/: PreferencesDialog.vala  TextView.vala  Window.vala
